[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/UI/resources/CanvasLayerColorBack.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Resources/Header 1.tres" type="Theme" id=2]
[ext_resource path="res://src/Resources/Normal Font.tres" type="Theme" id=3]
[ext_resource path="res://src/Scenes/GridContainer.gd" type="Script" id=4]
[ext_resource path="res://src/UI/PlayerButtons.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Scenes/OnlineStartup.gd" type="Script" id=6]
[ext_resource path="res://src/Scenes/OptionButton.gd" type="Script" id=7]
[ext_resource path="res://src/Scenes/SeedLineEdit.gd" type="Script" id=8]
[ext_resource path="res://src/Scenes/ChatLog.gd" type="Script" id=9]
[ext_resource path="res://src/UI/ConnectionContainer.tscn" type="PackedScene" id=10]

[node name="OnlineStartup" type="Node"]
script = ExtResource( 6 )

[node name="CanvasLayer" parent="." instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.5
margin_top = -151.0
margin_right = 251.5
margin_bottom = 151.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 496.0
margin_bottom = 330.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/HSplitContainer"]
margin_right = 402.0
margin_bottom = 323.0

[node name="HSplitContainer" type="HSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer"]
margin_right = 256.0
margin_bottom = 31.0
theme = ExtResource( 2 )
text = "Play with people online!"
align = 1

[node name="ReturnButton" type="Button" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer"]
margin_left = 268.0
margin_right = 402.0
margin_bottom = 31.0
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 402.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 26.0
theme = ExtResource( 3 )
text = "Room Code:"

[node name="CurrentRoomCode" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_top = 5.0
margin_right = 124.0
margin_bottom = 26.0
theme = ExtResource( 3 )
text = "AAAA"

[node name="Divider" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 128.0
margin_top = 5.0
margin_right = 136.0
margin_bottom = 26.0
theme = ExtResource( 3 )
text = "*"

[node name="Label3" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_top = 5.0
margin_right = 218.0
margin_bottom = 26.0
theme = ExtResource( 3 )
text = "Join Room:"

[node name="JoinRoomCode" type="LineEdit" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 222.0
margin_right = 268.0
margin_bottom = 31.0
theme = ExtResource( 3 )
placeholder_text = "????"

[node name="Label2" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 402.0
margin_bottom = 91.0
theme = ExtResource( 3 )
text = "Need controllers or have everyone use keyboard!"

[node name="HSplitContainer2" type="HBoxContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer"]
margin_top = 95.0
margin_right = 402.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer2"]
margin_right = 60.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Players:"

[node name="PlayerNum" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer2"]
margin_left = 64.0
margin_right = 73.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer2"]
margin_left = 77.0
margin_right = 87.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer2/MarginContainer"]
margin_top = 3.0
margin_right = 10.0
margin_bottom = 17.0
text = "*"
align = 1

[node name="Label2" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer2"]
margin_left = 91.0
margin_right = 175.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Controllers:"

[node name="ControllersNum" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer2"]
margin_left = 179.0
margin_right = 188.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "0"

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 402.0
margin_bottom = 216.0
size_flags_vertical = 3
columns = 2
script = ExtResource( 4 )
playerButtons = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_right = 196.0
margin_bottom = 21.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer"]
margin_right = 196.0
margin_bottom = 21.0

[node name="p1Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer/VSplitContainer"]
margin_right = 196.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press E or X on Controller 1!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_right = 402.0
margin_bottom = 21.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer2"]
margin_right = 202.0
margin_bottom = 21.0

[node name="p2Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer2/VSplitContainer"]
margin_right = 202.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press / or X on Controller 2!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_top = 25.0
margin_right = 196.0
margin_bottom = 46.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer3"]
margin_right = 196.0
margin_bottom = 21.0

[node name="p3Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer3/VSplitContainer"]
margin_right = 196.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press 9 or X on Controller 3!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer4" type="MarginContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_top = 25.0
margin_right = 402.0
margin_bottom = 46.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer4"]
margin_right = 202.0
margin_bottom = 21.0

[node name="p4Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer4/VSplitContainer"]
margin_right = 202.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press O or X on Controller 4!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer5" type="MarginContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_top = 50.0
margin_right = 196.0
margin_bottom = 71.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer5"]
margin_right = 196.0
margin_bottom = 21.0

[node name="p5Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer5/VSplitContainer"]
margin_right = 196.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press X or A on Controller 5!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer6" type="MarginContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_top = 50.0
margin_right = 402.0
margin_bottom = 71.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer6"]
margin_right = 202.0
margin_bottom = 21.0

[node name="p6Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer6/VSplitContainer"]
margin_right = 202.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press X or A on Controller 6!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer7" type="MarginContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_top = 75.0
margin_right = 196.0
margin_bottom = 96.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer7"]
margin_right = 196.0
margin_bottom = 21.0

[node name="p7Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer7/VSplitContainer"]
margin_right = 196.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press X or A on Controller 7!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer8" type="MarginContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer"]
margin_left = 200.0
margin_top = 75.0
margin_right = 402.0
margin_bottom = 96.0

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer8"]
margin_right = 202.0
margin_bottom = 21.0

[node name="p8Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/GridContainer/MarginContainer8/VSplitContainer"]
margin_right = 202.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Press X or A on Controller 8!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer3" type="HSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 402.0
margin_bottom = 247.0

[node name="Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer3"]
margin_top = 3.0
margin_right = 108.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Session Length:"

[node name="OptionButton" type="OptionButton" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer3"]
margin_left = 120.0
margin_right = 402.0
margin_bottom = 27.0
theme = ExtResource( 3 )
script = ExtResource( 7 )

[node name="HSplitContainer4" type="HSplitContainer" parent="Control/PanelContainer/HSplitContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 402.0
margin_bottom = 282.0

[node name="Label" type="Label" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer4"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 26.0
theme = ExtResource( 3 )
text = "Seed:"

[node name="SeedLineEdit" type="LineEdit" parent="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer4"]
margin_left = 48.0
margin_right = 402.0
margin_bottom = 31.0
theme = ExtResource( 3 )
script = ExtResource( 8 )

[node name="StartButton" type="Button" parent="Control/PanelContainer/HSplitContainer/VBoxContainer"]
margin_top = 286.0
margin_right = 402.0
margin_bottom = 323.0
theme = ExtResource( 2 )
disabled = true
text = "Start"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/PanelContainer/HSplitContainer"]
margin_left = 414.0
margin_right = 489.0
margin_bottom = 323.0

[node name="ChatLog" type="RichTextLabel" parent="Control/PanelContainer/HSplitContainer/VBoxContainer2"]
margin_right = 75.0
margin_bottom = 295.0
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Chat log!"
script = ExtResource( 9 )

[node name="LineEdit" type="LineEdit" parent="Control/PanelContainer/HSplitContainer/VBoxContainer2"]
margin_top = 299.0
margin_right = 75.0
margin_bottom = 323.0

[node name="ConnectionContainer" parent="." instance=ExtResource( 10 )]

[connection signal="pressed" from="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="text_entered" from="Control/PanelContainer/HSplitContainer/VBoxContainer/HBoxContainer/JoinRoomCode" to="." method="_on_JoinRoomCode_text_entered"]
[connection signal="item_selected" from="Control/PanelContainer/HSplitContainer/VBoxContainer/HSplitContainer3/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Control/PanelContainer/HSplitContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="text_entered" from="Control/PanelContainer/HSplitContainer/VBoxContainer2/LineEdit" to="." method="_on_LineEdit_text_entered"]
